--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 @import url(https://fonts.googleapis.com/css?family=Zen+Kurenaido:regular&display=swap);
 @import url(https://fonts.googleapis.com/css?family=Pacifico:regular&display=swap);
 @font-face {
-	font-family: "Gunny Rewritten", sans-serif;
+	font-family: "Gunny Rewritten";
 	src: url(../fonts/GunnyRewritten.woff2) format("woff2"), url(../fonts/GunnyRewritten.woff) format("woof");
 	font-weight: 400;
 	font-style: normal;
@@ -11,7 +11,7 @@
 h1 {
 	color: darkcyan;
 	font-size: 40px;
-	font-family: "Courier New", Courier, fantasy;
+	font-family: "Courier New", Courier, sans-serif;
 	text-align: center;
 	font-weight: 900;
 	text-shadow: 10px 10px 20px rgb(69, 100, 90);
@@ -53,7 +53,7 @@ h2 {
 
 .text2 {
 	font-family: "Lucida Sans", Arial, sans-serif;
-	font-weight: 300px;
+	font-weight: 300;
 	font-size: 18px;
 	color: goldenrod;
 	text-decoration: line-through;
