--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,9 @@
 @import "null.css";
-@import url(https://fonts.googleapis.com/css?family=Zen+Kurenaido:regular&display=swap);
-@import url(https://fonts.googleapis.com/css?family=Pacifico:regular&display=swap);
+@import url("https://fonts.googleapis.com/css?family=Zen+Kurenaido:regular&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Pacifico:regular&display=swap");
 @font-face {
 	font-family: "Gunny Rewritten";
-	src: url(../fonts/GunnyRewritten.woff2) format("woff2"), url(../fonts/GunnyRewritten.woff) format("woof");
+	src: url("../fonts/GunnyRewritten.woff2") format("woff2"), url("../fonts/GunnyRewritten.woff") format("woof");
 	font-weight: 400;
 	font-style: normal;
 	font-display: swap;
